[Fix] footer fixed & list overflow scroll

--- a/shopping_cart_oop/index.css
+++ b/shopping_cart_oop/index.css
@@ -17,14 +17,16 @@ i{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100vh;
+    min-height: 100vh;
 }
 .content{
-    flex: auto;
     display: flex;
+    height: 100vh;
+    padding-bottom: 60px;
 }
 .menu{
     width: 25vw;
+    overflow-y: scroll;
     background-color: #e3e3e3;
 }
 .menu-item{
@@ -42,6 +44,7 @@ i{
 }
 .goods-list{
     width: 75vw;
+    overflow-y: scroll;
     /* background-color: yellowgreen; */
 }
 .goods-item{
@@ -148,8 +151,12 @@ i{
     /* background-color: aqua; */
 }
 .footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
     display: flex;
     justify-content: space-between;
+    width: 100%;
     height: 60px;
     color: #e3e3e3;
     background-color: #333;
